--- a/src/main.css
+++ b/src/main.css
@@ -13,6 +13,7 @@ body {
   position: fixed;
   height: 40px;
   width: 100%;
+  margin-top: 10px;
 }
 
 #header-img {
@@ -22,12 +23,17 @@ body {
 
 #nav-bar {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 210px);
+  margin-left: 200px;
 }
 
-#nav-bar a {
+.nav-link {
   justify-self: center;
   align-self: center;
+  text-decoration: none;
+  color: #000;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 #container {
